@@ -1,11 +1,23 @@
-<% if current_user.task_tracker_screen_token.blank? or @templates.blank? %>
-  Please enter your Task Tracker Screen Token which you can find here:<br />
-  <%= link_to TASK_TRACKER_URL + "/settings#screen_token", TASK_TRACKER_URL + "/settings#screen_token", target: '_blank' %><br />
-  <%= label_tag 'task_tracker_screen_token' %>
-  <%= text_field_tag "task_tracker_screen_token", '' %>
-  <div style="clear:both"></div>
-  <%= link_to_function image_tag('gentleface/16/key.png', alt: '', size: '11x11') + 'Update My Screen Token', "$('#screen_token').val($('#task_tracker_screen_token').val()); $.post($('#templates_form').attr('action'), $('#templates_form').serialize(), null, 'script');", class: 'button' %>
+<% width = '1074px' %>
+<% if TASK_TRACKER_URL.blank? %>
+  <%# Render blank (different from nothing) %>
+<% elsif current_user.task_tracker_screen_token.blank? or @templates.blank? %>
+  <div class="field">
+    Please enter your Task Tracker Screen Token which you can find here:<br />
+    <%= link_to TASK_TRACKER_URL + "/settings#screen_token", TASK_TRACKER_URL + "/settings#screen_token", target: '_blank' %><br />
+    <%= label_tag 'task_tracker_screen_token' %><br />
+    <%= text_field_tag "task_tracker_screen_token", '', style: "width:#{width}" %>
+    <div style="clear:both"></div>
+    <%= link_to_function image_tag('gentleface/16/key.png', alt: '', size: '11x11') + 'Update My Screen Token', "$('#screen_token').val($('#task_tracker_screen_token').val()); $.post($('#templates_form').attr('action'), $('#templates_form').serialize(), null, 'script');", class: 'button' %>
+  </div>
 <% else %>
-  <%= label 'call', 'tt_template_id' %>
-  <%= select 'call', 'tt_template_id', [['---', nil]] + @templates.collect{|t| [t['name'], t['id']]} %>
+  <div class="field">
+    <%= label 'call', 'tt_template_id', 'Template' %><br />
+    <%= select 'call', 'tt_template_id', options_for_select([['---', nil]] + @templates.collect{|t| [t['full_name'], t['id']]}, params[:tt_template_id]) %>
+  </div>
+  <div class="field">
+    <%= label_tag :initial_due_date, 'Initial Template Due Date' %><br />
+    <%= text_field_tag :initial_due_date, params[:initial_due_date], class: 'datepicker' %>
+    <%= javascript_tag "$('.datepicker').datepicker({showOtherMonths: true, selectOtherMonths: true, changeMonth: true, changeYear: true});" %>
+  </div>
 <% end %>
