@@ -1,0 +1,4 @@
+# If you wish to connect with an instance of Task Tracker (https://github.com/remomueller/notes), then enter the Task Tracker instance URL below along with a Service Account email and password, otherwise leave this blank.
+TASK_TRACKER_URL = "<%= print "Enter Task Tracker Url: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s %>"
+TT_EMAIL = "<%= print "Enter Task Tracker Service Account Email: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s %>"
+TT_PASSWORD = "<%= print "Enter Task Tracker Service Account Password: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s %>"
